Clear the Main at a uniqewords package